[add]testing if image works

--- a/classwork/Day 1 - 3.ipynb
+++ b/classwork/Day 1 - 3.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "source": [
     "## Activity MinMaxScaler\n",
-    "![day1-1.png](attachment:day1-1.png)"
+    "![day1-1.png](attachment:day1-1.png)\n",
+    "![alt](https://github.com/SamuelFolledo/DS2.1-Machine-Learning/blob/master/static/screenshots/day1-1.png)"
    ]
   },
   {
