[add] testing new solution

--- a/classwork/Day 1 - 3.ipynb
+++ b/classwork/Day 1 - 3.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "## Activity MinMaxScaler\n",
     "![day1-1.png](attachment:day1-1.png)\n",
-    "![alt](https://github.com/SamuelFolledo/DS2.1-Machine-Learning/blob/master/static/screenshots/day1-1.png)"
+    "<img src=\"../static/screenshots/day1-1.png\">\n",
+    "![alt](\"../static/screenshots/day1-1.png\")"
    ]
   },
   {
