--- a/classwork/Day 1 - 4.ipynb
+++ b/classwork/Day 1 - 4.ipynb
@@ -2665,8 +2665,8 @@
    "metadata": {},
    "source": [
     "## The difference between .predict() and .predict_proba for logistic reg classifier¶\n",
-    "- [**predict**](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html#sklearn.linear_model.LogisticRegression.predict) will return a list of 0 and 1 values for a given sample\n",
-    "- [**predict_proba**](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html#sklearn.linear_model.LogisticRegression.predict_proba) will return a list of lists where each element in the list is a probability estimate: the probability of the element being a 0 or 1\n",
+    "- [**predict**](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html#sklearn.linear_model.LogisticRegression.predict) will **return a list of 0 and 1 values** for a given sample\n",
+    "- [**predict_proba**](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html#sklearn.linear_model.LogisticRegression.predict_proba) will **return a list of lists where each element in the list is a probability estimate**: the probability of the element being a 0 or 1\n",
     "\n",
     "### Resources:\n",
     "https://www.ritchieng.com/machine-learning-evaluate-classification-model/"
