--- a/classwork/homework/Homework 2- Support Vector Machines.ipynb
+++ b/classwork/homework/Homework 2- Support Vector Machines.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -593,17 +593,12 @@
     "\n",
     "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "TN = confusion[0, 0]\n",
-    "FP = confusion[0, 1]\n",
-    "FN = confusion[1, 0]\n",
-    "TP = confusion[1, 1]\n",
-    "\n",
     "print(\"\\nConfusion=\\n\", confusion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -618,18 +613,22 @@
     }
    ],
    "source": [
-    "Accuray = ((TP + TN) / float(TP + TN + FP + FN))\n",
+    "def validate_data(confusion):\n",
+    "    TN = confusion[0, 0]\n",
+    "    FP = confusion[0, 1]\n",
+    "    FN = confusion[1, 0]\n",
+    "    TP = confusion[1, 1]\n",
+    "    Accuray = ((TP + TN) / float(TP + TN + FP + FN))\n",
+    "    Precision = TP / float(TP + FP)\n",
+    "    Recall = TP / float(FN + TP)\n",
+    "    F1_score = 2*Precision*Recall/float(Precision+Recall)\n",
     "\n",
-    "Precision = TP / float(TP + FP)\n",
-    "\n",
-    "Recall = TP / float(FN + TP)\n",
-    "\n",
-    "F1_score = 2*Precision*Recall/float(Precision+Recall)\n",
-    "\n",
-    "print(\"Accuracy=\\t\", Accuray)\n",
-    "print(\"Precision=\\t\", Precision)\n",
-    "print(\"Recall=\\t\\t\", Recall)\n",
-    "print(\"F1_score=\\t\", F1_score)"
+    "    print(\"Accuracy=\\t\", Accuray)\n",
+    "    print(\"Precision=\\t\", Precision)\n",
+    "    print(\"Recall=\\t\\t\", Recall)\n",
+    "    print(\"F1_score=\\t\", F1_score)\n",
+    "    \n",
+    "validate_data(confusion)"
    ]
   },
   {
@@ -640,32 +639,308 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Stretch Challenge\n",
+    "Try different parameters such as different kernels to see how it affects the overall performance of the model. For a full list of the tunable parameters you can use with an SVC, see [the documentation](http://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html) on sklearn.org.\n",
+    "\n",
+    "### Parameters\n",
+    "**C: float, default=1.0**\n",
+    "- Regularization parameter. The strength of the regularization is inversely proportional to C. Must be strictly positive. The penalty is a squared l2 penalty.\n",
+    "\n",
+    "**kernel: {‘linear’, ‘poly’, ‘rbf’, ‘sigmoid’, ‘precomputed’}, default=’rbf’**\n",
+    "- Specifies the kernel type to be used in the algorithm. It must be one of ‘linear’, ‘poly’, ‘rbf’, ‘sigmoid’, ‘precomputed’ or a callable. If none is given, ‘rbf’ will be used. If a callable is given it is used to pre-compute the kernel matrix from data matrices; that matrix should be an array of shape `(n_samples, n_samples)`.\n",
+    "\n",
+    "**degreeint, default=3**\n",
+    "- Degree of the polynomial kernel function (‘poly’). Ignored by all other kernels.\n",
+    "\n",
+    "**gamma: {‘scale’, ‘auto’} or float, default=’scale’**\n",
+    "- Kernel coefficient for ‘rbf’, ‘poly’ and ‘sigmoid’.\n",
+    "    - if `gamma='scale'` (default) is passed then it uses 1 / (n_features * X.var()) as value of gamma,\n",
+    "    - if ‘auto’, uses 1 / n_features.\n",
+    "\n",
+    "**coef0: float, default=0.0**\n",
+    "- Independent term in kernel function. It is only significant in ‘poly’ and ‘sigmoid’.\n",
+    "\n",
+    "**shrinking: bool, default=True**\n",
+    "- Whether to use the shrinking heuristic.\n",
+    "\n",
+    "**probability: bool, default=False**\n",
+    "- Whether to enable probability estimates. This must be enabled prior to calling `fit`, will slow down that method as it internally uses 5-fold cross-validation, and `predict_proba` may be inconsistent with `predict`.\n",
+    "\n",
+    "**tol: float, default=1e-3**\n",
+    "- Tolerance for stopping criterion.\n",
+    "\n",
+    "**cache_size: float, default=200**\n",
+    "- Specify the size of the kernel cache (in MB).\n",
+    "\n",
+    "**class_weight: dict or ‘balanced’, default=None**\n",
+    "- Set the parameter C of class i to class_weight[i]*C for SVC. If not given, all classes are supposed to have weight one. The “balanced” mode uses the values of y to automatically adjust weights inversely proportional to class frequencies in the input data as `n_samples / (n_classes * np.bincount(y))`\n",
+    "\n",
+    "**verbose: bool, default=False**\n",
+    "- Enable verbose output. Note that this setting takes advantage of a per-process runtime setting in libsvm that, if enabled, may not work properly in a multithreaded context.\n",
+    "\n",
+    "**max_iter: int, default=-1**\n",
+    "- Hard limit on iterations within solver, or -1 for no limit.\n",
+    "\n",
+    "**decision_function_shape: {‘ovo’, ‘ovr’}, default=’ovr’**\n",
+    "- Whether to return a one-vs-rest (‘ovr’) decision function of shape (n_samples, n_classes) as all other classifiers, or the original one-vs-one (‘ovo’) decision function of libsvm which has shape `(n_samples, n_classes * (n_classes - 1) / 2)`. However, one-vs-one (‘ovo’) is always used as multi-class strategy. The parameter is ignored for binary classification.\n",
+    "\n",
+    "**break_ties: bool, default=False**\n",
+    "- If true, `decision_function_shape='ovr'`, and number of classes > 2, predict will break ties according to the confidence values of decision_function; otherwise the first class among the tied classes is returned. Please note that breaking ties comes at a relatively high computational cost compared to a simple predict.\n",
+    "\n",
+    "**random_state: int or RandomState instance, default=None**\n",
+    "- Controls the pseudo random number generation for shuffling the data for probability estimates. Ignored when `probability` is False. Pass an int for reproducible output across multiple function calls. See Glossary."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=10 instead of 1\n",
+      "\n",
+      "Accuracy=\t 0.9440559440559441\n",
+      "Precision=\t 0.9555555555555556\n",
+      "Recall=\t\t 0.9555555555555556\n",
+      "F1_score=\t 0.9555555555555556\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"C=10 instead of 1\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=10, degree=2)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=100 instead of 1\n",
+      "\n",
+      "Accuracy=\t 0.9790209790209791\n",
+      "Precision=\t 0.9887640449438202\n",
+      "Recall=\t\t 0.9777777777777777\n",
+      "F1_score=\t 0.9832402234636872\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"C=100 instead of 1\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=100, degree=2)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C=1000 instead of 1\n",
+      "\n",
+      "Accuracy=\t 0.972027972027972\n",
+      "Precision=\t 0.9777777777777777\n",
+      "Recall=\t\t 0.9777777777777777\n",
+      "F1_score=\t 0.9777777777777777\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/svm/base.py:193: FutureWarning: The default value of gamma will change from 'auto' to 'scale' in version 0.22 to account better for unscaled features. Set gamma explicitly to 'auto' or 'scale' to avoid this warning.\n",
+      "  \"avoid this warning.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"C=1000 instead of 1\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=1000, degree=2)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma=0.1 instead of default 'scale'\n",
+      "\n",
+      "Accuracy=\t 0.9370629370629371\n",
+      "Precision=\t 0.9550561797752809\n",
+      "Recall=\t\t 0.9444444444444444\n",
+      "F1_score=\t 0.9497206703910613\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"gamma=0.1 instead of default 'scale'\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=1, degree=2, gamma=0.1)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma=0.01 instead of default 'scale'\n",
+      "\n",
+      "Accuracy=\t 0.7552447552447552\n",
+      "Precision=\t 0.72\n",
+      "Recall=\t\t 1.0\n",
+      "F1_score=\t 0.8372093023255813\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"gamma=0.01 instead of default 'scale'\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=1, degree=2, gamma=0.01)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gamma=0.001 instead of default 'scale'\n",
+      "\n",
+      "Accuracy=\t 0.6293706293706294\n",
+      "Precision=\t 0.6293706293706294\n",
+      "Recall=\t\t 1.0\n",
+      "F1_score=\t 0.7725321888412017\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"gamma=0.001 instead of default 'scale'\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='poly',C=1, degree=2, gamma=0.001)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kernel=rbf instead of poly\n",
+      "\n",
+      "Accuracy=\t 0.986013986013986\n",
+      "Precision=\t 1.0\n",
+      "Recall=\t\t 0.9777777777777777\n",
+      "F1_score=\t 0.9887640449438202\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "\n",
+    "print(\"kernel=rbf instead of poly\\n\")\n",
+    "# 6\n",
+    "df_svc = svm.SVC(kernel='rbf', random_state= 0, gamma=0.1, C=1, degree=2)\n",
+    "# 7\n",
+    "df_svc.fit(X_train, y_train)\n",
+    "# 8\n",
+    "y_pred = df_svc.predict(X_test)\n",
+    "confusion = metrics.confusion_matrix(y_test, y_pred)\n",
+    "validate_data(confusion)"
+   ]
   },
   {
    "cell_type": "code",
