[add] setup day 9 homework

--- a/classwork/Day 9.ipynb
+++ b/classwork/Day 9.ipynb
@@ -1007,6 +1007,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### End of Day 9 lecture day 10"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
