--- a/classwork/homework/Homework 3- PCA and KMeans.ipynb
+++ b/classwork/homework/Homework 3- PCA and KMeans.ipynb
@@ -21,20 +21,20 @@
     "DELICATESSEN| Annual spending (m.u.)on and delicatessen products (Continuous)\n",
     "\n",
     "\n",
-    "**TASK**: Read in `wholesale_customers_data.csv` from the datasets folder and store in a dataframe. Store the Channel column in a separate variable, and then drop the Channel and Region columns from the dataframe. Scale the data and use PCA to engineer new features (Principal Components). Print out the explained variance for each principal component.\n",
+    "**TASK**: Read in `wholesale_customers_data.csv` from the datasets folder and store in a dataframe. Store the `Channel` column in a separate variable, and then drop the Channel and Region columns from the dataframe. Scale the data and use PCA to engineer new features (Principal Components). Print out the explained variance for each principal component.\n",
     "\n",
     "## K-Means, but Without All the Supervision\n",
-    "**Challenge**: Use K-Means clustering on the wholesale_customers dataset, and then again on a version of this dataset transformed by PCA.\n",
+    "**Challenge**: Use K-Means clustering on the `wholesale_customers` dataset, and then again on a version of this dataset transformed by PCA.\n",
     "\n",
-    "Read in the data from the wholesale_customers_data.csv file contained within the datasets folder.\n",
+    "Read in the data from the `wholesale_customers_data.csv` file contained within the datasets folder.\n",
     "\n",
-    "Store the Channel column in a separate variable, and then drop the Region and Channel columns from the dataframe. Channel will act as our labels to tell us what class of customer each datapoint actually is, in case we want to check the accuracy of our clustering.\n",
+    "Store the `Channel` column in a separate variable, and then drop the `Region` and `Channel` columns from the dataframe. `Channel` will act as our labels to tell us what class of customer each datapoint actually is, in case we want to check the accuracy of our clustering.\n",
     "\n",
     "Scale the data, fit a k-means object to it, and then visualize the data and the clustering.\n",
     "\n",
     "Use PCA to transform the data, and then use k-means clustering on it to see if our results are any better.\n",
     "\n",
-    "Challenge:_ Use the confusion matrix function to create a confusion matrix and see how accurate our clustering algorithms were. Which did better--scaled data, or data transformed by PCA?"
+    "**Challenge**: Use the confusion matrix function to create a confusion matrix and see how accurate our clustering algorithms were. Which did better--scaled data, or data transformed by PCA?"
    ]
   },
   {
