[add] completed tasks for hw3

--- a/classwork/Day 1 - 5.ipynb
+++ b/classwork/Day 1 - 5.ipynb
@@ -1,6 +1,11 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,9 +25,9 @@
    "metadata": {},
    "source": [
     "## Activity MinMaxScaler\n",
-    "<img src=\"../static/screenshots/day1-1.png\">\n",
+    "<img src=\"../static/screenshots/day1-1.png\" width=\"900\">\n",
     "\n",
-    "![alt](../static/screenshots/day1-1.png)"
+    "<!-- ![alt](../static/screenshots/day1-1.png) -->"
    ]
   },
   {
@@ -2698,7 +2703,6 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
