--- a/classwork/homework/Homework 3- PCA and KMeans.ipynb
+++ b/classwork/homework/Homework 3- PCA and KMeans.ipynb
@@ -43,6 +43,420 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task\n",
+    "### Read in wholesale_customers_data.csv from the datasets folder and store in a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Channel</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicassen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13265</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>4221</td>\n",
+       "      <td>6404</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22615</td>\n",
+       "      <td>5410</td>\n",
+       "      <td>7198</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>1777</td>\n",
+       "      <td>5185</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Channel  Region  Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "0        2       3  12669  9656     7561     214              2674        1338\n",
+       "1        2       3   7057  9810     9568    1762              3293        1776\n",
+       "2        2       3   6353  8808     7684    2405              3516        7844\n",
+       "3        1       3  13265  1196     4221    6404               507        1788\n",
+       "4        2       3  22615  5410     7198    3915              1777        5185"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../dataset/wholesale_customers_data.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store the Channel column in a separate variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = df[\"Channel\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drop the Channel and Region columns from the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fresh</th>\n",
+       "      <th>Milk</th>\n",
+       "      <th>Grocery</th>\n",
+       "      <th>Frozen</th>\n",
+       "      <th>Detergents_Paper</th>\n",
+       "      <th>Delicassen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13265</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>4221</td>\n",
+       "      <td>6404</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22615</td>\n",
+       "      <td>5410</td>\n",
+       "      <td>7198</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>1777</td>\n",
+       "      <td>5185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>29703</td>\n",
+       "      <td>12051</td>\n",
+       "      <td>16027</td>\n",
+       "      <td>13135</td>\n",
+       "      <td>182</td>\n",
+       "      <td>2204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>39228</td>\n",
+       "      <td>1431</td>\n",
+       "      <td>764</td>\n",
+       "      <td>4510</td>\n",
+       "      <td>93</td>\n",
+       "      <td>2346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>14531</td>\n",
+       "      <td>15488</td>\n",
+       "      <td>30243</td>\n",
+       "      <td>437</td>\n",
+       "      <td>14841</td>\n",
+       "      <td>1867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>10290</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>2232</td>\n",
+       "      <td>1038</td>\n",
+       "      <td>168</td>\n",
+       "      <td>2125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>439</th>\n",
+       "      <td>2787</td>\n",
+       "      <td>1698</td>\n",
+       "      <td>2510</td>\n",
+       "      <td>65</td>\n",
+       "      <td>477</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>440 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Fresh   Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "0    12669   9656     7561     214              2674        1338\n",
+       "1     7057   9810     9568    1762              3293        1776\n",
+       "2     6353   8808     7684    2405              3516        7844\n",
+       "3    13265   1196     4221    6404               507        1788\n",
+       "4    22615   5410     7198    3915              1777        5185\n",
+       "..     ...    ...      ...     ...               ...         ...\n",
+       "435  29703  12051    16027   13135               182        2204\n",
+       "436  39228   1431      764    4510                93        2346\n",
+       "437  14531  15488    30243     437             14841        1867\n",
+       "438  10290   1981     2232    1038               168        2125\n",
+       "439   2787   1698     2510      65               477          52\n",
+       "\n",
+       "[440 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop(['Channel', 'Region'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scale the data and use PCA to engineer new features (Principal Components)\n",
+    "- Use standard_scaler from Day 1 notes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.44865163  0.59066829  0.05293319 ... -0.58936716 -0.04356873\n",
+      "  -0.06633906]\n",
+      " [ 1.44865163  0.59066829 -0.39130197 ... -0.27013618  0.08640684\n",
+      "   0.08915105]\n",
+      " [ 1.44865163  0.59066829 -0.44702926 ... -0.13753572  0.13323164\n",
+      "   2.24329255]\n",
+      " ...\n",
+      " [ 1.44865163  0.59066829  0.20032554 ... -0.54337975  2.51121768\n",
+      "   0.12145607]\n",
+      " [-0.69029709  0.59066829 -0.13538389 ... -0.41944059 -0.56977032\n",
+      "   0.21304614]\n",
+      " [-0.69029709  0.59066829 -0.72930698 ... -0.62009417 -0.50488752\n",
+      "  -0.52286938]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "standard_scaler = preprocessing.StandardScaler()\n",
+    "X_ss = standard_scaler.fit_transform(df)\n",
+    "print(X_ss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "pca = PCA(n_components=6)\n",
+    "X_r = pca.fit_transform(X_ss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Print out the explained variance for each principal component."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3.10707136 1.79404441 1.0140786  0.74007428 0.55790035 0.46035462]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pca.explained_variance_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## K-Means\n",
+    "\n",
+    "Challenge: Use K-Means clustering on the wholesale_customers dataset, and then again on a version of this dataset transformed by PCA.\n",
+    "\n",
+    "Read in the data from the wholesale_customers_data.csv file contained within the datasets folder.\n",
+    "\n",
+    "Store the Channel column in a separate variable, and then drop the Region and Channel columns from the dataframe. Channel will act as our labels to tell us what class of customer each datapoint actually is, in case we want to check the accuracy of our clustering.\n",
+    "\n",
+    "Scale the data, fit a k-means object to it, and then visualize the data and the clustering.\n",
+    "\n",
+    "Use PCA to transform the data, and then use k-means clustering on it to see if our results are any better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
