[add] descriptions, goals, and reference to datasets

--- a/Final Project/Final Project.ipynb
+++ b/Final Project/Final Project.ipynb
@@ -4,8 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Project\n"
+    "# Final Project: Predicting NBA's Most Valuable Player (MVP)\n",
+    "\n",
+    "My goal on this final project is to  **predicting NBA's MVP each year** based on their stats. \n",
+    "\n",
+    "### Dataset\n",
+    "- Datasets is from [NBA Players stats since 1950](https://www.kaggle.com/drgilermo/nba-players-stats?select=Seasons_Stats.csv)\n",
+    "- Th"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "players = pd.read_csv('datasets/Players.csv')\n",
+    "seasons_stats = pd.read_csv('datasets/Seasons_Stats.csv')\n",
+    "player_data = pd.read_csv('datasets/player_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
