--- a/Final Project/Final Project.ipynb
+++ b/Final Project/Final Project.ipynb
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -2073,41 +2073,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
        "      <th>Player</th>\n",
        "      <th>born</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>Curly Armstrong</td>\n",
        "      <td>1918.0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>Cliff Barker</td>\n",
        "      <td>1921.0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>Leo Barnhorst</td>\n",
        "      <td>1924.0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>Ed Bartels</td>\n",
        "      <td>1925.0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>Ralph Beard</td>\n",
        "      <td>1927.0</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -2117,33 +2117,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4914</th>\n",
-       "      <td>4512</td>\n",
        "      <td>Guerschon Yabusele</td>\n",
        "      <td>1995.0</td>\n",
+       "      <td>4512</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4915</th>\n",
-       "      <td>4514</td>\n",
        "      <td>George Yardley</td>\n",
        "      <td>1928.0</td>\n",
+       "      <td>4514</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4916</th>\n",
-       "      <td>4535</td>\n",
        "      <td>Harry Zeller</td>\n",
        "      <td>1919.0</td>\n",
+       "      <td>4535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4917</th>\n",
-       "      <td>4545</td>\n",
        "      <td>Ante Zizic</td>\n",
        "      <td>1997.0</td>\n",
+       "      <td>4545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4918</th>\n",
-       "      <td>4549</td>\n",
        "      <td>Matt Zunic</td>\n",
        "      <td>1919.0</td>\n",
+       "      <td>4549</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2151,23 +2151,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      index              Player    born\n",
-       "0         0     Curly Armstrong  1918.0\n",
-       "1         1        Cliff Barker  1921.0\n",
-       "2         2       Leo Barnhorst  1924.0\n",
-       "3         3          Ed Bartels  1925.0\n",
-       "4         4         Ralph Beard  1927.0\n",
-       "...     ...                 ...     ...\n",
-       "4914   4512  Guerschon Yabusele  1995.0\n",
-       "4915   4514      George Yardley  1928.0\n",
-       "4916   4535        Harry Zeller  1919.0\n",
-       "4917   4545          Ante Zizic  1997.0\n",
-       "4918   4549          Matt Zunic  1919.0\n",
+       "                  Player    born    id\n",
+       "0        Curly Armstrong  1918.0     0\n",
+       "1           Cliff Barker  1921.0     1\n",
+       "2          Leo Barnhorst  1924.0     2\n",
+       "3             Ed Bartels  1925.0     3\n",
+       "4            Ralph Beard  1927.0     4\n",
+       "...                  ...     ...   ...\n",
+       "4914  Guerschon Yabusele  1995.0  4512\n",
+       "4915      George Yardley  1928.0  4514\n",
+       "4916        Harry Zeller  1919.0  4535\n",
+       "4917          Ante Zizic  1997.0  4545\n",
+       "4918          Matt Zunic  1919.0  4549\n",
        "\n",
        "[4919 rows x 3 columns]"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 349,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2176,8 +2176,8 @@
     "born = pd.concat([players_born, player_data_born]) #concatenate 2 datasets\n",
     "born = born.drop_duplicates() #remove duplicates\n",
     "born = born.reset_index() #reset index\n",
-    "# born = born.drop(\"index\", axis=1) #remove index column\n",
-    "# born['id'] = born[\"index\"] #assign id as the index\n",
+    "born['id'] = born[\"index\"] #assign id as the index\n",
+    "born = born.drop(\"index\", axis=1) #remove index column\n",
     "born"
    ]
   },
