[add] assign the MVP to our dataset

--- a/Final Project/Final Project.ipynb
+++ b/Final Project/Final Project.ipynb
@@ -2089,11 +2089,11 @@
     }
    ],
    "source": [
-    "born = pd.concat([players_born, player_data_born]) #concatenate/combine 2 datasets\n",
-    "born = born.drop_duplicates() #remove duplicates\n",
-    "born = born.reset_index() #reset index\n",
-    "born['id'] = born[\"index\"] #assign id as the index\n",
-    "born = born.drop(\"index\", axis=1) #remove index column\n",
+    "born = pd.concat([players_born, player_data_born]) #concatenate 2 datasets\n",
+    "born = born.drop_duplicates()                      #remove duplicates\n",
+    "born = born.reset_index()                          #reset index\n",
+    "born['id'] = born[\"index\"]                         #assign id as the index\n",
+    "born = born.drop(\"index\", axis=1)                  #remove index column\n",
     "\n",
     "born.head()"
    ]
@@ -2305,7 +2305,7 @@
     }
    ],
    "source": [
-    "data = seasons_stats.merge(born, on=[\"Player\", \"born\"])\n",
+    "data = seasons_stats.merge(born, on=[\"Player\", \"born\"]) #merge born dataset's Player and born columns to seasons_stats\n",
     "data.head()"
    ]
   },
